# fake

my_project/: README.md  conversation_state.json  pyproject.toml  test_ba.py  test_solution.py
my_project/src/my_project/: ba_flow.py  crew.py  flow_state.py  main.py  main_flow.py  state_manager.py
my_project/src/my_project/config/: agents.yaml  tasks.yaml
my_project/src/my_project/models/: __init__.py  documentation_models.py  solution_models.py
my_project/src/my_project/tools/: documentation_tool.py  solution_tool.py  state_tool.py  user_interaction_tool.py
new/new1/src/app/: page.tsx
