[project]
name = "my_project"
version = "0.1.0"
description = "my_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1",
    "litellm>=1.79.3",
]

[project.scripts]
my_project = "my_project.main_flow:run"
train = "my_project.main_flow:train"
replay = "my_project.main_flow:replay"
test = "my_project.main_flow:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
